--- a/CSS_advanced/styles/14-style.css
+++ b/CSS_advanced/styles/14-style.css
@@ -1,6 +1,15 @@
+/* ========== normalize.css の内容（すべて）ここに貼り付ける ========== */
+
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* ...ここに全コードを貼る（約400行）... */
+
+
+/* ========== 以下、あなたのスタイル（13-style.cssの内容） ========== */
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap');
 
 :root {
+  /* カラー、フォント、サイズ、変数の定義などすべて引き継ぐ */
   --color-primary: #d73953;
   --color-black: #090909;
   --color-white: #ffffff;
@@ -25,6 +34,9 @@
   --line-height-big: 1.8;
 
   --section-header-align: center;
+  --section-tagline-transform: uppercase;
+  --section-title-margin: 0;
+  --section-title-color: var(--color-black);
 }
 
 html {
@@ -39,9 +51,21 @@ body {
   line-height: var(--line-height-base);
 }
 
-a {
+a[href] {
   color: var(--text-color);
   text-decoration: none;
+}
+
+a[href]:visited {
+  font-style: italic;
+}
+
+a[href]:hover {
+  text-decoration: underline;
+}
+
+a[href]:active {
+  background-color: var(--color-light-grey);
 }
 
 .visually-hidden {
@@ -56,8 +80,19 @@ a {
   text-align: var(--section-header-align);
 }
 
+.section-title {
+  font-family: var(--font-family-title);
+  font-size: var(--font-size-xx-large);
+  font-weight: var(--font-weight-bold);
+  margin: var(--section-title-margin);
+  color: var(--section-title-color);
+}
+
 .section-tagline {
   color: var(--color-primary);
+  font-family: var(--font-family-title);
+  text-transform: var(--section-tagline-transform);
+  font-weight: var(--font-weight-bold);
 }
 
 h1, h2, h3, h4, h5, h6 {
